# MDredd

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: adapters.py  constants.py  db.py  exceptions.py  main.py  models.py
dredd/bdp/: BDPLoop.py  BDPVectorized.py  __init__.py
